...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity"
    android:id="@+id/main_activity_layout"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
